--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Mansalva', cursive;
-    background-color: #040512;
 }
 
 h1 {
@@ -19,7 +18,6 @@ h1 {
 
 form {
     margin: 30px 20px;
-    color: white;
 }
 
 button {
@@ -28,6 +26,15 @@ button {
     background-color: #4771bf;
 }
 
+#images {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 img {
+    margin: 10px;
+}
+
+p {
     margin: 10px;
 }
